# ai-fon-bot

./: README.md  TEB_CHECKLIST.md  config.sample.toml  config.tefas.toml  portfolio_state.json  portfolio_state_tefas.json  pyproject.toml  sample_prices.csv
.github/workflows/: daily-report.yml
fon_ai_bot/: __init__.py  broker.py  cli.py  config.py  data.py  engine.py  journal.py  models.py  reporting.py  risk.py  signals.py  state.py  tefas.py  telegram_notifier.py
